# stavka

./: .gitignore  AUDIT_PROMPT.md  LICENSE  PROMPT.md  README.md  USAGE.md  dashboard_app.py  demo.py  pyproject.toml
.github/workflows/: ci.yml
bukmeker/: __init__.py  auth.py  backtest.py  calibration.py  cli.py  coupon.py  dashboard.py  entities.py  features.py  live_predictions.py  margin.py  monetization.py  paper_trading.py  ratings.py  value_betting.py
bukmeker/connectors/: __init__.py  ai_connector.py  ai_mapper.py  historical.py  raw_source.py  schema.py  sync.py
bukmeker/dashboard_pages/: about.py  basketball.py  connector.py  coupon.py  entities.py  football.py  help.py  paper_trading.py  tennis.py
bukmeker/models/: __init__.py  goals.py
bukmeker/sports/: __init__.py  basketball.py  football.py  tennis.py
tests/: test_ai_connector.py  test_ai_mapper.py  test_auth.py  test_backtest.py  test_calibration.py  test_cli.py  test_connectors_schema.py  test_coupon.py  test_dashboard.py  test_dashboard_logic.py  test_entities.py  test_features.py  test_goals.py  test_historical.py  test_live_predictions.py  test_margin.py  test_monetization.py  test_paper_trading.py  test_ratings.py  test_raw_source.py  test_sports.py  test_sync.py  test_value_betting.py
